--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "app-studio-maga",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,9 +17,11 @@
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "expo": "~48.0.15",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.7",
+    "react-native-ble-manager": "^10.0.2",
     "react-native-dotenv": "^3.4.8",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-gesture-handler": "~2.9.0",
@@ -35,7 +36,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.41.0"
   },
   "private": true
 }
