--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
+    "native-start": "react-native start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/outfit": "^0.2.3",
     "@react-native-masked-view/masked-view": "0.2.8",
@@ -16,12 +18,17 @@
     "@types/react": "~18.0.27",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "eas-cli": "^3.13.0",
     "expo": "~48.0.15",
+    "expo-dev-client": "^2.2.1",
+    "expo-device": "^5.2.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
+    "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^10.0.2",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-dotenv": "^3.4.8",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-gesture-handler": "~2.9.0",
